--- a/source/_posts/20150910_jQueryOn.md
+++ b/source/_posts/20150910_jQueryOn.md
@@ -1,4 +1,5 @@
-title: 关于jQuery的on()
+title: 关于jQuery的on()事件
+date: 2015-09-08
 ---
 
 回忆一下学习web的2年来的经历，发现w3school简直居功至伟，从html+css，到PHP，再到后来的jQuery，上面的资料的很详细。
@@ -9,6 +10,8 @@ $(selector).click();
 $(selector).mouseenter();
 ```
 真的是应有尽有。其实在毕业前我都是这么写事件的，直到今年毕业了才换了个更好的写法。
+
+<!-- more -->
 
 ```javascript
 $(selector).on(event,childSelector,data,function,map)
