--- a/source/_posts/20150910_jsObject.md
+++ b/source/_posts/20150910_jsObject.md
@@ -1,7 +1,11 @@
 title: js中的数据存储
+date: 2015-09-10
 ---
 
 在日常的开发中经常会遇到需要将临时数据混存起来供后期使用的场景，特别是做一些管理系统或者游戏时，都会要处理大量的数据。这时候就需要思考如何使用js来存取数据了。
+
+<!-- more -->
+
 ## 利用简单的变量
 
 去年五月份刚开始实习的时候，对于js的数据类型理解还只是一知半解。所以基本上是这样解决的：
