--- a/source/_posts/20150910_mouseDir.md
+++ b/source/_posts/20150910_mouseDir.md
@@ -1,9 +1,12 @@
 title: jQuery获取鼠标滑入div的方向
+date: 2015-09-10
 ---
 
 大学时期，人人上曾经有一个疯传的网网站——[大软坊](http://app.hustonline.net/major)。
 上面有一个很酷的效果，当鼠标划过菜单时，它能识别你是从哪个方向滑入和滑出，并执行不同的动画效果。
 当时觉得很酷炫，就自己动了下脑筋研究了这个问题。
+
+<!-- more -->
 
 ## 思路
 把div当作一个矩形，用两条对角线将矩形分成四个区域（如下图），那么当鼠标滑入/滑出div的
