--- a/source/_posts/20151111_h5Timer.md
+++ b/source/_posts/20151111_h5Timer.md
@@ -1,7 +1,11 @@
-title: HTML5应用中的计时器的三种方案
+title: HTML5中计时器的三种方案
+date: 2015-10-11
 ---
 
 在做HTML5游戏或者单页应用时我们常常需要使用到计时器模块，比如游戏中的倒计时功能。
+
+<!-- more -->
+
 ## 常规方案
 最常见的计时器方案一般无非`setTimeout`和`setInterval`，基本上已经被玩坏了……
 ```javascript
